Add rendering sub directory
* Refactor for better separation
* Multiple ways to bind material attribs

--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="jw-renderer.css" type="text/css"/>
-        <script src="./js/wgl.js"></script>
         <script src="./js/utils.js"></script>
         
         <!-- Math -->
@@ -13,12 +12,14 @@
         <script src="./js/math/vector3.js"></script>
         <script src="./js/math/vector4.js"></script>
 
-        <!-- Renderer -->
-        <script src="./js/texture.js"></script>
-        <script src="./js/shader.js"></script>
-        <script src="./js/material.js"></script>
-        <script src="./js/meshes.js"></script>
-        <script src="./js/models.js"></script>
+        <!-- Renderer -->        
+        <script src="./js/rendering/wgl.js"></script>
+        <script src="./js/rendering/render_defines.js"></script>
+        <script src="./js/rendering/texture.js"></script>
+        <script src="./js/rendering/shader.js"></script>
+        <script src="./js/rendering/material.js"></script>
+        <script src="./js/rendering/meshes.js"></script>
+        <script src="./js/rendering/models.js"></script>
 
         <!-- Test App -->
         <script src="test_app.js"></script>        
